<resources>
    <string-array name="rout_types">
        <item>Fastest</item>
        <item>Cheapest</item>
        <item>Shortest</item>
    </string-array>
    <string-array name="car_types">
        <item>STANDARD</item>
        <item>LUXURY</item>
        <item>VAN</item>
    </string-array>
    <string name="app_name">Cruise</string>
    <string name="menu">Menu</string>
    <string name="pin">pin</string>
    <string name="other">Other</string>
    <string name="inbox">Inbox</string>
    <string name="support">Support</string>
    <string name="search">Search</string>
    <string name="app_name_upper">CRUISE</string>
    <string name="cruise_with_us">Cruise with us!</string>
    <string name="login_register_line">Don\'t have an acoount?</string>
    <string name="LogIn">LogIn</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="let_s_cruise">Let\'s cruise!</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_cruise_history">Your cruise history</string>
    <string name="cruise_details">Cruise details</string>
    <string name="history">History</string>
    <string name="book_a_ride">Book a ride</string>
    <string name="account">Account</string>
    <string name="quick_pick">Quick pick</string>
    <string name="current_ride">Current ride</string>
    <string name="hey_we_have_a_cruise_for_you">Hey, we have a cruise for you</string>
    <string name="reason">Reason</string>
    <string name="date">Date:</string>
    <string name="route">Route:</string>
    <string name="split_fare_with">Split fare with:</string>
    <string name="cruise_time">Cruise duration:</string>
    <string name="distance">Distance:</string>
    <string name="rating">Rating</string>
    <string name="vehicle">Vehicle:</string>
    <string name="driver">Driver:</string>
    <string name="comments">Comments:</string>
    <string name="elapsed_time">Elapsed time:</string>
    <string name="estimated_arrival_time">Estimated arrival time:</string>
    <string name="total_price">Total price:</string>
    <string name="report_inconsistency">Report inconsistency</string>
    <string name="panic">Panic</string>
    <string name="my_rides">My rides</string>
    <string name="new_ride">New ride</string>
    <string name="accept_ride">Accept ride</string>
    <string name="register_title">Register</string>
    <string name="next_button_text">Next</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="reenter_password">Reenter password</string>
    <string name="registration_finish_title">So hop in, we’ve got to cruise</string>
    <string name="hop_in">Hop in</string>
    <string name="registration_successful">You are all set</string>
    <string name="your_password_is_in_safe_hands">Your password is in safe hands</string>
    <string name="we_will_stalk_you">We will stalk you :)</string>
    <string name="surname">Surname</string>
    <string name="introduce_yourself">Introduce yourself:</string>
    <string name="we_will_not_spam_you">We will not spam you :)</string>
    <string name="pick_up_location">Pick-up location</string>
    <string name="destination">Destination</string>
    <string name="find_a_cruise">Find a cruise</string>
    <string name="where_to">Where to</string>
    <string name="map">Map</string>
    <string name="add_additional_routes">Add additional routes</string>
    <string name="details">Details</string>
    <string name="pets">Pets</string>
    <string name="baby_seat">Baby seat</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="split_fare">Split Fare</string>
    <string name="mark_favourite_route">Mark favourite route</string>
    <string name="cruise_confirmed">Cruise confirmed</string>
    <string name="cruise_denied">Cruise rejected</string>
    <string name="back_home">Back Home</string>
    <string name="no_driver_available">No driver available</string>
    <string name="try_again_later">Try again later...</string>
    <string name="invite_people">Invite people</string>
    <string name="enter_emails_of_people_you_want_to_invite">Enter emails of people you want to invite:</string>
    <string name="book_a_ride_title">Book a ride</string>
    <string name="enter_emails_of_people_you_want_to_invite_optional">Enter emails of people you want to invite (optional):</string>
    <string name="additional_options">Additional options (optional):</string>
    <string name="waiting_for_others">Waiting for others:</string>
    <string name="personal_information">Personal information</string>
    <string name="statistics">Statistic</string>
    <string name="log_out">Log Out</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="cruise_picture">Cruise picture</string>
    <string name="from">From:</string>
    <string name="to">To</string>
    <string name="book_now">book now</string>
    <string name="book_future">book future</string>
    <string name="trash_bin_icon">Trash bin icon</string>
    <string name="card_number">Card number</string>
    <string name="cvv">CVV</string>
    <string name="country">Country</string>
    <string name="nickname">Nickname</string>
    <string name="or">or</string>
    <string name="person_icon">Person icon</string>
    <string name="message_button">Message button</string>
    <string name="call_button">Call button</string>
    <string name="decline">Decline</string>
    <string name="start">Start</string>
    <string name="reports">Reports</string>
    <string name="add_payment">Add payment</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="edit_photo">Edit photo</string>
    <string name="first_name">First name</string>
    <string name="price">Price</string>
    <string name="submit">Submit</string>
    <string name="favourite_rides">Favourite rides</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="oops">Ooops</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="old_password">Old password</string>
    <string name="we_are_checking_if_you_have_a_ride">We are checking if you have a ride...</string>
    <string name="you_do_not_have_any_cruise_go_order_one_and_come_back">You do not have any cruise, go order one and come back!</string>
    <string name="add_your_panic_report_reason">Add your panic/report reason...</string>
    <string name="cancel">Cancle</string>
    <string name="you_don_t_a_have_current_ride">You don\'t a have current ride</string>
    <string name="loading">loading...</string>
    <string name="ride_pending">We are processing your request</string>
    <string name="pinned">Pinned</string>
    <string name="edit">Edit</string>
    <string name="jump_to_inbox">jump to inbox</string>
    <string name="rebook_this_ride">Rebook this ride</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="map_preview">Map preview</string>
    <string name="repeat_password">Reenter password</string>
    <string name="you_forgot_password_no_problem">You forgot password, no problem!</string>
    <string name="reset_your_password_now">Reset your password now!</string>
    <string name="we_sent_you_email_with_code_to_confirm_your_identity">We sent you email with code to confirm your identity.</string>
    <string name="driver_will_be_on_address">Driver will be on your pickup location in scheduled time</string>
    <string name="passengers">Passengers:</string>

</resources>