<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_margin="30dp"
        android:text="@string/you_forgot_password_no_problem"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forget_password_email"
        android:layout_below="@id/forget_password"
        style="@style/inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forget_password_email_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/sendEmailForPassChangeBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:textSize="20dp"
        android:layout_height="60dp" />

</RelativeLayout>